# catalyst

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ; typeinfo for C.ll  CMakeLists.txt  LICENSE  README.md  SConstruct  build_and_install_llvm.bat  hello  hello.cpp  language_design_principles.md  license-template.txt  sonar-project.properties
.fleet/: run.json
.github/workflows/: ci.yml  coverity.yml  quality.yml  sonar.yml
test_files/: 1.ct  2.ct
toolchain/: CMakeLists.txt  README.md  SConscript
toolchain/common/: version.hpp
toolchain/common/catalyst/: ast.hpp  platform.hpp  rtti.hpp  version.hpp
toolchain/common/catalyst/ast/: ast.hpp  decl.hpp  expr.hpp  general.hpp  parser.hpp  stmt.hpp
toolchain/compiler/: CMakeLists.txt
toolchain/compiler/src/: compiler.cpp  compiler.hpp  jit.cpp  jit.hpp  main.cpp  object_file.cpp  object_file.hpp  runtime.cpp  runtime.hpp  serializable.cpp  serializable.hpp  target.hpp
toolchain/compiler/src/codegen/: codegen.cpp  codegen.hpp  decl.cpp  decl.hpp  decl_class.cpp  decl_classifiers.cpp  decl_classifiers.hpp  decl_locals_pass.cpp  decl_locals_pass.hpp  decl_overloading_pass.cpp  decl_overloading_pass.hpp  decl_proto_pass.cpp  decl_proto_pass.hpp  decl_struct.cpp  decl_type.cpp  decl_type.hpp  expr.cpp  expr.hpp  expr_arithmetic.cpp  expr_arithmetic.hpp  expr_type.cpp  expr_type.hpp  function_overloading.cpp  function_overloading.hpp  metadata.cpp  metadata.hpp  pass.cpp  pass.hpp  scope.cpp  scope.hpp  state.hpp  stmt.cpp  stmt.hpp  symbol.cpp  symbol.hpp  type.cpp  type.hpp  type_serialization.cpp  value.cpp  value.hpp
toolchain/compiler/src/codegen/object/: member.cpp  member.hpp  object_type.cpp  object_type.hpp  object_type_reference.cpp  object_type_reference.hpp
toolchain/compiler/src/codegen/object/class/: class_type.cpp  decl_class.cpp  type_class.cpp
toolchain/compiler/src/codegen/object/iface/: decl_class.cpp  decl_iface.cpp  type_iface.cpp
toolchain/compiler/src/codegen/object/struct/: decl_struct.cpp  struct_type.cpp  type_struct.cpp
toolchain/compiler/tests/: arithmetics.cpp  branching.cpp  class.cpp  class_casting.cpp  frontend.cpp  functions.cpp  inheritance.cpp  multiple_inheritance.cpp  namespaces.cpp  scopes.cpp  struct.cpp  types.cpp  virtuals.cpp
toolchain/contrib/tar/: tar.cpp
toolchain/parser/: CMakeLists.txt  SConscript  ast.hpp  export_grammar_for_playground.py  grammar.hpp  parser.cpp  parser.hpp
toolchain/parser/src/: ast.hpp  grammar.hpp  main.cpp  parser.cpp  parser.hpp  positional.hpp  state.hpp  types.hpp
toolchain/parser/tests/: SConscript  comments.cpp  doctest_main.cpp  functions.cpp
