cmake_minimum_required(VERSION 3.23)
project(catalyst VERSION 0.0.1 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_COLOR_DIAGNOSTICS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # For sonarsource

if(COVERAGE)
        message("Coverage requested")
        if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
                message("  -> enabled for Clang")
                set(CMAKE_C_FLAGS "-fprofile-instr-generate -fcoverage-mapping")
                set(CMAKE_CXX_FLAGS "-fprofile-instr-generate -fcoverage-mapping")
                set(CMAKE_EXE_LINKER_FLAGS "-fprofile-instr-generate -fcoverage-mapping")
        elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
                message("  -> enabled for GCC")
                set(CMAKE_C_FLAGS "--coverage")
                set(CMAKE_CXX_FLAGS "--coverage")
                set(CMAKE_EXE_LINKER_FLAGS "--coverage")
        endif()
endif()

option(BUILD_TOOLCHAIN "Enable building toolchain" ON)

if(BUILD_TOOLCHAIN)
    add_subdirectory(toolchain)
endif()
